2004-02-05  Jacob Smullyan  <smulloni@bracknell.smullyan.org>

	* SkunkWeb/SkunkWeb/Server.py (_aPrefixIn): typo fix that caused 
	errors every request for people using userModuleCleanup

2004-01-20  Brian Olsen  <brian@qinternet.com>

	* pylibs/PyDO/PyDO.py "order" for get...() methods can accept a
	string or tuple of strings and tuples. Each tuple in the tuple must
	contain two values, the column name and "ASC" or "DESC".

	* pylibs/PyDO/PyDO2.py Same feature addition as in PyDO.py.

2004-01-15  Jacob Smullyan  <smulloni@bracknell.smullyan.org>

	* pylibs/AE/Cache.py (_mcCompileFunc): fix for Windows line
	returns and message catalogs (as is already done for templates and
	python code).

2004-01-12  Jacob Smullyan  <smulloni@bracknell.smullyan.org>

	* pylibs/skunk/date/format.py (HTTPDate): adding (replacing
	equivalent function in Date module).

2004-01-10  Jacob Smullyan  <smulloni@bunbury.smullyan.org>

	* SkunkWeb/Services/templating/Handler.py: bug fix: now hide .inc
	and .pyinc files from requests! 

	* pylibs/AE/Cache.py (_genCacheKey): use different cachekey
	function if key files aren't being written.  I think this works,
	but it needs testing.
	

2004-01-05  Jacob Smullyan  <smulloni@bracknell.smullyan.org>

	* pylibs/formlib/validates.py (STATELIST): added Arkansas, which
	was missing for some reason, and fixed the state code for Arizona.

2003-12-31  Jacob Smullyan  <smulloni@bunbury.smullyan.org>

	* configure, configure.in: no longer test for egenix-mx.

	* SkunkWeb/Services/templating/MailServices.py (sendmail),
	SkunkWeb/Services/templating/Handler.py,
	SkunkWeb/Services/web/protocol.py: removed dependencies on Date
	and mx.DateTime.

	* pylibs/skunk/date/timeutil.py (arpa): equivalent of
	mx.DateTime.ARPA.str.

	* pylibs/AE/InitTags.py (initTags): inclusion of DateTag is now
	conditional on the presence of mx (and will remain that way as
	long as DateTag depends on it).
	
2003-12-29  Jacob Smullyan  <smulloni@bunbury.smullyan.org>
